php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48644 mysqlnd does not compile with '--enable-mysqlnd-threading'
Submitted: 2009-06-22 11:53 UTC Modified: 2009-06-23 19:15 UTC
From: alex dot emsenhuber at bluewin dot ch Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.3.0RC4 OS: Mac OS X 10.5.7
Private report: No CVE-ID: None
 [2009-06-22 11:53 UTC] alex dot emsenhuber at bluewin dot ch
Description:
------------
ext/mysqlnd/mysqlnd_result.c does not compile with '--enable-mysqlnd-threading' in ./configure, removing this option make PHP compile correctly. This seems to be caused by http://cvs.php.net/viewvc.cgi/php-src/ext/mysqlnd/mysqlnd_structs.h?r1=1.2.2.19&r2=1.2.2.20 where free_chunck was removed.

Reproduce code:
---------------
'./configure' \
'--prefix=/usr' \
'--mandir=/usr/share/man' \
'--infodir=/usr/share/info' \
'--sysconfdir=/private/etc' \
'--enable-bcmath' \
'--enable-calendar' \
'--enable-cgi' \
'--enable-cli' \
'--enable-ctype' \
'--enable-dba' \
'--enable-debug' \
'--enable-embedded-mysqli' \
'--enable-exif' \
'--enable-ftp' \
'--enable-gd-native-ttf' \
'--enable-maintainer-zts' \
'--enable-mbstring' \
'--enable-mbregex' \
'--enable-mysqlnd-threading' \
'--enable-pcntl' \
'--enable-sockets' \
'--enable-sqlite-utf8' \
'--enable-wddx' \
'--enable-zend-multibyte' \
'--with-config-file-path=/private/etc' \
'--with-curl=/usr' \
'--with-db4=/usr/local/BerkeleyDB.4.7' \
'--with-gd' \
'--with-imap-ssl' \
'--with-kerberos=/usr' \
'--with-mcrypt' \
'--with-mhash' \
'--with-mysql=mysqlnd' \
'--with-mysql-sock=/private/var/mysql/mysql.sock' \
'--with-mysqli=mysqlnd' \
'--with-pdo-mysql=mysqlnd' \
'--with-pdo-pgsql=/Library/PostgreSQL/8.3' \
'--with-pgsql=/Library/PostgreSQL/8.3' \
'--with-readline' \
'--with-snmp' \
'--with-sqlite' \
'--with-tsrm-pthreads' \
'--with-xmlrpc' \
'--with-zlib-dir=/usr' \
'--with-apxs2=/usr/bin/apxs'

make

Expected result:
----------------
the file compiles correctly.

Actual result:
--------------
/Users/alexandre/Downloads/php53/ext/mysqlnd/mysqlnd_result.c: In function 'mysqlnd_free_background_buffered_data':
/Users/alexandre/Downloads/php53/ext/mysqlnd/mysqlnd_result.c:363: error: 'struct st_mysqlnd_memory_pool_chunk' has no member named 'free_chunk'

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-06-23 14:16 UTC] dsp@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2009-06-23 16:24 UTC] johannes@php.net
btw. your configure line looks strange: 
- Why do you need "maintainer-zts"?
- embedded-mysqli, which means embedding the MySQL server into PHP, sn't possible with mysqli using mysqlnd and isn't a well supported feature
- mysqlndthreading is an experimental optimization thing, not ready to be used for anything (except developing it)
- enabling CGI and Apache support at once isn't possible
- I'm sure I missed some things...
 [2009-06-23 19:15 UTC] alex dot emsenhuber at bluewin dot ch
I just like to try configuration options for my development build, but thanks anyway for the hints ;)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Aug 27 18:00:01 2026 UTC