Fix bug #48644 mysqlnd does not compile with '--enable-mysqlnd-threading'